--- a/package.json
+++ b/package.json
@@ -5,24 +5,42 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config ./config/webpack.dev.config.js",
-    "build": "webpack --config ./config/webpack.dev.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config ./config/webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
+    "happypack": "^5.0.1",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^5.2.0",
+    "react-loadable": "^5.5.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.36.1",
+    "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-svg": "^13.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   }
 }
