--- a/package.json
+++ b/package.json
@@ -15,12 +15,23 @@
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
+    "babel-react-rfor": "^1.0.2",
+    "babel-react-rif": "^1.0.0",
+    "babel-react-rmodel": "^1.0.2",
+    "babel-react-rshow": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.4",
+    "eslint-plugin-react": "^7.23.2",
     "file-loader": "^6.2.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-cssnext": "^3.1.0",
@@ -35,6 +46,10 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "antd": "^4.15.4",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -42,5 +57,10 @@
     "react-svg": "^13.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0"
+  },
+  "lint-staged": {
+    "src/**/*.{jsx,txs,ts,js,json,css,md}": [
+      "eslint --quiet"
+    ]
   }
 }
