--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": [
-    ["@babel/preset-react"],
+    "@babel/preset-typescript",
+    "@babel/preset-react",
     [
       "@babel/preset-env",
       {
@@ -18,7 +19,8 @@
     "module:babel-react-rmodel",
     "module:babel-react-rshow",
     "@babel/plugin-transform-runtime",
-    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
     [
       "import",
       {
