--- a/.babelrc
+++ b/.babelrc
@@ -21,6 +21,7 @@
     "@babel/plugin-transform-runtime",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-proposal-private-methods", { "loose": true }],
     [
       "import",
       {
