--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-react-rmodel": "^1.0.2",
     "babel-react-rshow": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "compression-webpack-plugin": "^7.1.2",
     "css-loader": "^5.2.4",
     "eslint-plugin-react": "^7.23.2",
     "file-loader": "^6.2.0",
