--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config ./config/webpack.dev.config.js",
-    "build": "webpack --config ./config/webpack.prod.config.js"
+    "start": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.dev.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "babel-react-rshow": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression-webpack-plugin": "^7.1.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
     "eslint-plugin-react": "^7.23.2",
     "file-loader": "^6.2.0",
@@ -38,6 +39,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^5.2.0",
     "react-loadable": "^5.5.0",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.1",
