支持异步组件引入

--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,9 @@
     ]
   ],
   "plugins": [
+    ["./src/utils/my-plugin-import", {
+      "libraryName": "src-components"
+    }],
     "module:babel-react-rif",
     "module:babel-react-rfor",
     "module:babel-react-rmodel",
