组件按需引入

--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,10 @@
     ]
   ],
   "plugins": [
+    ["./src/utils/my-plugin-import", {
+      "libraryName": "src-components",
+      "alias": "@/components"
+    }],
     "module:babel-react-rif",
     "module:babel-react-rfor",
     "module:babel-react-rmodel",
