组件按需加载

--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,8 @@
   ],
   "plugins": [
     ["./src/utils/my-plugin-import", {
-      "libraryName": "src-components"
+      "libraryName": "src-components",
+      "alias": "@/components"
     }],
     "module:babel-react-rif",
     "module:babel-react-rfor",
